--- a/src/assets/common.css
+++ b/src/assets/common.css
@@ -1,7 +1,21 @@
 .custom-tooltip {
-    background-color: #fff;
-    border: 1px solid #ccc;
-    padding: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    max-width: 200px;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  padding: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  max-width: 200px;
+}
+
+@media (min-width: 0px) and (max-width: 640px) {
+  #flexApp {
+    flex-direction: column;
   }
+
+  #flexApp1 {
+    width: 100%;
+  }
+
+  #flexApp2 {
+    width: 100%;
+  }
+}
